移除sun内部专用API的引用